<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Admissions"
    android:background="#F9FBFB">

    <ImageView
        android:id="@+id/back"
        android:layout_width="52dp"
        android:layout_height="42dp"
        android:src="@drawable/back2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:clickable="true" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:background="@color/gold"
        android:layout_height="74dp"
        android:layout_marginTop="64dp"
        android:fontFamily="cursive"
        android:text="@string/admission_title"
        android:textAlignment="center"
        android:textColor="@color/d_blue"
        android:textSize="60dp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.045" />

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="562dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/adminInfo"
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:layout_margin="10dp"
                android:lineSpacingExtra="10dp"
                android:text="Requirements: "
                android:textStyle="bold"
                android:fontFamily="sans-serif-black"
                android:textColor="@color/black"
                android:textSize="20sp" />
            <TextView
                android:id="@+id/adminInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:lineSpacingExtra="10dp"
                android:text="@string/req1"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />
            <TextView
                android:id="@+id/adminInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:lineSpacingExtra="10dp"
                android:text="@string/req2"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />
            <TextView
                android:id="@+id/adminInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:lineSpacingExtra="10dp"
                android:paddingBottom="50dp"
                android:text="@string/req3"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />



        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/applyB"
        android:layout_width="210dp"
        android:layout_height="64dp"
        android:background="@drawable/white_blueline"
        android:clickable="true"
        android:paddingTop="17dp"
        android:text="@string/apply_now"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/scrollView3"
        app:layout_constraintVertical_bias="0.934" />

</androidx.constraintlayout.widget.ConstraintLayout>