<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawerLayout"
    tools:context=".MainActivity"
    android:background="#F9FBFB">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:backgroundTint="@color/gold"
            android:clickable="true"
            android:scaleType="center"
            app:fabCustomSize="90dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="5dp"
            app:maxImageSize="60dp"
            android:src="@drawable/mailimg"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="335dp"
            android:layout_height="168dp"
            android:background="@drawable/textbox_dblue"
            app:layout_constraintBottom_toBottomOf="@+id/scrollView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.076"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.062" />

        <ImageView
            android:layout_width="242dp"
            android:layout_height="147dp"
            android:src="@drawable/quote"
            app:layout_constraintBottom_toBottomOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="@+id/textView3"
            app:layout_constraintHorizontal_bias="0.301"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toTopOf="@+id/textView3"
            app:layout_constraintVertical_bias="0.571" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="182dp"
            android:layout_height="179dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView3"
            app:layout_constraintVertical_bias="0.043"
            app:srcCompat="@drawable/ucc_logo_crop" />


        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="394dp"
            android:layout_height="514dp"
            android:layout_margin="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.47"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.981">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_marginStart="10dp"
                    android:lineSpacingExtra="5dp"
                    android:text="About UCC"
                    android:textColor="@color/d_blue"
                    android:textSize="45sp"
                    android:textStyle="bold"
                    android:fontFamily="cursive"/>

                <TextView
                    android:id="@+id/aboutUs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:lineSpacingExtra="15dp"
                    android:layout_margin="8dp"
                    android:text="@string/about1"
                    android:textColor="@color/black"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:textAlignment="center"
                    android:textSize="18sp" />
                <TextView
                    android:id="@+id/aboutUs2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:lineSpacingExtra="15dp"
                    android:text="@string/about2"
                    android:layout_margin="8dp"
                    android:textColor="@color/black"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:textAlignment="center"
                    android:textSize="18sp" />
                <TextView
                    android:id="@+id/aboutUs3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:fontFamily="sans-serif"
                    android:lineSpacingExtra="15dp"
                    android:text="@string/about3"
                    android:textColor="@color/black"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:textAlignment="center"
                    android:textSize="18sp" />
            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:menu="@menu/menu"
        app:headerLayout="@layout/nav_bar"
        android:layout_gravity="start"
        android:fitsSystemWindows="true">

    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>